# PyAppLauncher

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  configure  configure.ac  main.c
.github/workflows/: build.yml
case-test/: __main__.py  check_list.json
case-test/test-app/: environ_1.ini  environ_2.ini
case-test/test-app/app/: __main__.py
demo/: __main__.py
